--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
       <a href="#certificates">Certificates</a>
       <a href="#achievements">Achievements</a>
       <a href="#contact">Contact</a>
-      <a href="lat.html">Kumpulan Tugas</a>
+      <a href="lat_css.html">Kumpulan Tugas</a>
     </nav>
   </header>
 
@@ -221,4 +221,5 @@ Walaupun dua dunia ini tampak berbeda—lautan dan teknologi—bagi saya keduany
   <script>AOS.init();</script>
 </body>
 </html>
+
 
